--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,14 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next/core-web-vitals",
+  "rules": {
+    "semi": [
+      "warn",
+      "never"
+    ],
+    "quotes": [
+      "warn",
+      "double"
+    ],
+    "no-tabs": "error"
+  }
 }
